--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,7 @@
   background-color: var(--bg2);
   border-radius: 3px;
   font-size: 24px;
-  font-weight: 500;
+  font-weight: bold;
 }
 
 .sublistDiv {
@@ -1017,7 +1017,7 @@ input:checked+.slider:before {
 
 .accountDiv .fieldDiv {
   display: block;
-  margin: 0 16px 4px 0;
+  margin: 0 0 4px 0;
 }
 
 
