--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,3 @@
-
-
 @keyframes fadein {
   0% {
     opacity: 0%;
@@ -52,7 +50,7 @@ body {
 }
 
 input::placeholder {
-  color: #32343f;
+  color: var(--bg5);
 }
 
 input {
@@ -114,11 +112,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 body::-webkit-scrollbar-track {
-  background-color: var(--bg2)
+  background-color: var(--bg2);
 }
 
 #settingsBtn {
-  font-size: 16px ;
+  font-size: 16px;
   padding: 6px 8px 6px 31px;
   width: 100%;
   background-size: 20px 20px;
@@ -213,10 +211,36 @@ body::-webkit-scrollbar-track {
 
 #toggleSideBtn {
   background-size: 20px 20px;
-  background-image: url('../assets/sidebar.svg');
+  background-image: url("../assets/sidebar.svg");
 }
 
 #toggleSideBtn:hover {
   background-color: var(--bg4);
-  background-image: url('../assets/sidebar1.svg');
+  background-image: url("../assets/sidebar1.svg");
+}
+
+#side #listsSearch::placeholder {
+  color: var(--bg5);
+}
+
+#side #listsSearch {
+  background-color: var(--bg1);
+  color:#404351;
+  float: right;
+  margin-top: 12px;
+  text-align: right;
+  margin-right: 2px;
+  width: calc(100% - 70px);
+}
+
+#exitSearch{
+  background-image: url('../assets/close.svg');
+  height: 16px;
+  background-position: center;
+  margin-top: 12px;
+  background-size: 100%;
+  float: right;
+  margin-right: 4px;
+  background-color: var(--bg1);
+  width: 16px;
 }
