--- a/src/style.css
+++ b/src/style.css
@@ -120,7 +120,15 @@
 .newItemToTopBtn {
   background-image: url("../assets/plus.svg");
   background-size: 16px 16px;
-  margin-right: 4px;
+  margin-left: 4px;
+}
+
+.blockItemCount {
+  color: var(--bg5);
+  display: inline-block;
+  margin-left: 5px;
+  vertical-align: top;
+  transform: translateY(-1px);
 }
 
 .newItemToTopBtn:hover {
@@ -206,22 +214,23 @@
 }
 
 .item {
-  padding: 10px 10px 2px 8px;
+  padding: 8px 10px 2px 8px;
   background-color: var(--bg3);
   margin-bottom: 6px;
   box-shadow: 0 1px 1px 0.3px var(--bg1);
-  width: calc((100% - 24px));
+  width: calc((100% - 18px));
   border-radius: 4px;
   transition: all 100ms, padding 0ms, width 0ms;
 }
 
 .item .title {
-  color: #4f5363;
+  color:#404351;
   font-size: 16px;
   display: inline-block;
   background-color: var(--bg3);
-  width: calc(100% - 48px);
+  width: calc(100% - 72px);
   transition: 100ms;
+  margin-left: 4px;
   transform: translateY(-4px);
 }
 
@@ -231,7 +240,7 @@
   background-color: var(--bg3);
   float: right;
   background-size: 20px 20px;
-  transform: translateY(-7px) translateX(6px);
+  transform: translateY(-4px) translateX(4px);
   background-image: url("../assets/settings.svg");
 }
 
@@ -240,11 +249,10 @@
 }
 
 .itemSettingsDiv {
-  width: calc(100% + 18px);
+  width: calc(100%);
   margin-top: 4px;
   padding-top: 4px;
-  margin-left: -8px;
-  border-top: 2px solid var(--bg3);
+  border-top: 2px solid var(--bg4);
 }
 
 .itemSettingsDiv button {
@@ -334,18 +342,6 @@
   background-image: url("../assets/trashColor.svg");
 }
 
-.item .description {
-  font-size: 14px;
-  color: #404351;
-  background-color: var(--bg3);
-  transition: 100ms;
-  line-height: 14px;
-  width: auto;
-  margin: 0 0 4px 0;
-  border-left: 2px solid var(--bg4);
-  padding: 0 4px 2px 8px;
-}
-
 .creationDateText {
   color: #2d303c;
   font-size: 12px;
@@ -355,65 +351,27 @@
   transform: translateY(-8px);
 }
 
-.colorBtn {
-  height: 16px !important;
-  width: 16px !important;
-  transform: translateY(-6px);
-  border-radius: 20px !important;
+.statusBtn {
+  height: 18px;
+  width: 18px;
+  transform: translateY(-1px);
   transition: 100ms;
-  border: 2px solid #00000000;
 }
 
-.colorBtn.c0 {
-  border-color: var(--blue);
+.statusBtn.s0 {
+  background-image: url("../assets/circleIcons/circlePause.svg");
 }
 
-.colorBtn.c1 {
-  border-color: var(--red);
+.statusBtn.s1 {
+  background-image: url("../assets/circleIcons/circleX.svg");
 }
 
-.colorBtn.c2 {
-  border-color: var(--yellow);
+.statusBtn.s2 {
+  background-image: url("../assets/circleIcons/circleQuestion.svg");
 }
 
-.colorBtn.c3 {
-  border-color: var(--green);
-}
-
-.colorBtn.c0:hover,
-.colorBtn.c0.active {
-  background-color: var(--blue);
-}
-
-.colorBtn.c1:hover,
-.colorBtn.c1.active {
-  background-color: var(--red);
-}
-
-.colorBtn.c2:hover,
-.colorBtn.c2.active {
-  background-color: var(--yellow);
-}
-
-.colorBtn.c3:hover,
-.colorBtn.c3.active {
-  background-color: var(--green);
-}
-
-.item.s0 {
-  border-left: 6px solid var(--blue);
-}
-
-.item.s1 {
-  border-left: 6px solid var(--red);
-}
-
-.item.s2 {
-  border-left: 6px solid var(--yellow);
-}
-
-.item.s3 {
-  border-left: 6px solid var(--green);
+.statusBtn.s3 {
+  background-image: url("../assets/circleIcons/circleCheck.svg");
 }
 
 .item.starred {
@@ -513,6 +471,7 @@
   user-select: none;
   display: none;
   padding: 4px 8px;
+  box-shadow: 0 1px 1px 0.3px var(--bg3);
   border-radius: 4px;
   z-index: 1000;
 }
@@ -1225,27 +1184,4 @@ input:checked + .slider:before {
   border-radius: 3px;
   transition: 200ms;
   padding: 4px 4px;
-}
-
-
-.statusBtn {
-  height: 16px;
-  width: 16px;
-  transform: translateY(-2px);
-  border-radius: 50%;
-  margin-right: 2px;
-  vertical-align: top;
-  transition: 100ms;
-}
-
-.statusBtn.s0 {
-  background-color: var(--blue);
-}
-
-.statusBtn.s1 {
-  background-color: var(--red);
-}
-
-.statusBtn.s2 {
-  background-color: var(--yellow);
 }
