--- a/src/global.css
+++ b/src/global.css
@@ -53,6 +53,11 @@ body {
 
 #app {
   display: none;
+  background-color: var(--bg1);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 input::placeholder {
@@ -75,7 +80,7 @@ select {
 *[contenteditable="true"]:empty:before {
   content: "...";
   pointer-events: none;
-  color: #2d303c;
+  color: var(--text4);
 }
 
 /* range sliders */
@@ -107,48 +112,22 @@ a {
 }
 
 /* scrollbars */
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 8px;
 }
 
-body::-webkit-scrollbar-thumb {
-  background-color: var(--bg1);
-  border-radius: 8px;
-  background-clip: padding-box;
-}
-
-body::-webkit-scrollbar-track {
-  background-color: var(--bg2);
-}
-
-#settingsBtn {
-  font-size: 16px;
-  padding: 6px 8px 6px 31px;
-  width: 100%;
-  background-size: 20px 20px;
-  background-position: 6px 5px;
-  background-image: url("../assets/settings1.svg");
-}
-
-#settingsBtn.active {
-  color: #dfdfdf;
-  background-image: url("../assets/settings2.svg");
-}
-
-#newListBtn {
+*::-webkit-scrollbar-thumb {
   background-color: var(--bg3);
-  border-radius: 50%;
-  width: 24px;
-  font-size: 20px;
+  border-radius: 8px;
   transition: 100ms;
-  user-select: none;
-  height: 24px;
-  color: #404351;
 }
 
-#newListBtn:hover {
+*::-webkit-scrollbar-thumb:hover {
   background-color: var(--bg4);
-  color: #4f5363;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: var(--bg1);
 }
 
 #listType {
@@ -217,38 +196,13 @@ body::-webkit-scrollbar-track {
 
 #toggleSideBtn {
   background-size: 20px 20px;
+  margin-left: var(--sidebarWidth);
   background-image: url("../assets/sidebar.svg");
 }
 
 #toggleSideBtn:hover {
   background-color: var(--bg4);
   background-image: url("../assets/sidebar1.svg");
-}
-
-#side #listsSearch::placeholder {
-  color: var(--bg5);
-}
-
-#side #listsSearch {
-  background-color: var(--bg1);
-  color: #404351;
-  float: right;
-  margin-top: 12px;
-  text-align: right;
-  margin-right: 2px;
-  width: calc(100% - 70px);
-}
-
-#exitSearch {
-  background-image: url("../assets/close.svg");
-  height: 16px;
-  background-position: center;
-  margin-top: 12px;
-  background-size: 100%;
-  float: right;
-  margin-right: 4px;
-  background-color: var(--bg1);
-  width: 16px;
 }
 
 .right {
@@ -281,4 +235,17 @@ body::-webkit-scrollbar-track {
 
 .margin4 {
   margin: 4px;
+}
+
+#footer {
+  width: 100%;
+  height: 16px;
+  background-color: var(--bg1);
+  position: fixed;
+  z-index: 1000;
+  bottom: 0;
+  color: var(--bg5);
+  user-select: none;
+  font-size: 12px;
+  padding: 0 4px 0 4px;
 }
