202207212125 - colors, removed footer

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
   --bg1: #0f1014;
   --bg2: #131519;
-  --bg3: #18191e;
+  --bg3: #18191c;
   --bg4: #1d1e23;
   --bg5: #222328;
   --text1: #696b74;
