--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,8 @@
   --text3: #46484f;
   --text4: #3a3c40;
   --green: #009966;
-  --greentransparent: #0099661a;
+  --selectionGreen: #00b0662f;
+  --greentransparent: #00b0661a;
   --yellow: #efba56;
   --yellowtransparent: #efba561a;
   --blue: #4a73db;
