--- a/src/sidenav.css
+++ b/src/sidenav.css
@@ -2,7 +2,7 @@
   position: fixed;
   height: 100%;
   background-color: var(--bg1);
-  padding: 0 12px 0 12px;
+  padding: 8px 12px 0 12px;
   overflow-x: hidden;
   transition: 100ms;
   flex-direction: column;
@@ -28,7 +28,6 @@
   margin-top: 8px;
   background-color: var(--green);
 }
-
 
 #settingsBtn {
   font-size: 16px;
