--- a/src/style.css
+++ b/src/style.css
@@ -24,10 +24,9 @@
 .item,
 .settingsDiv,
 .accountDiv {
-  box-shadow: 0 0 0 1px var(--bg1);
-  border-top: 1px solid var(--bg4);
+  box-shadow: 0 0 4px 0 var(--bg1);
   background-color: var(--bg3);
-  border-radius: 6px;
+  border-radius: 8px;
 }
 
 #lists {
